fix z-index

--- a/xuml-diagrams/src/main/webapp/xuml-diagrams.css
+++ b/xuml-diagrams/src/main/webapp/xuml-diagrams.css
@@ -26,7 +26,7 @@ body {font-family: Tahoma, Geneva, sans-serif;font-size:100%;}
 }
 #save {
 	background: url(images/save.png) no-repeat;
-    position:absolute; right:5px;width:32px;top:5px;height:32px;
+    position:absolute; right:5px;width:32px;top:5px;height:32px;z-index:2000;
 }
 #options-editor {display:none;}
 .operation {position:relative;padding-left:1.1em;left:-5px;top:2px;
